HappyPoker_assets/logs/baseapp.7001.2019-06-19.log
  INFO root [0x00001e60] [2019-06-19 19:33:00,112] - 
  INFO root [0x00001e60] [2019-06-19 19:33:00,112] - -----------------------------------------------------------------------------------------


  INFO root [0x00001e60] [2019-06-19 19:33:00,112] - Resmgr::initialize: KBE_ROOT=D:/kbengine/
  INFO root [0x00001e60] [2019-06-19 19:33:00,112] - Resmgr::initialize: KBE_RES_PATH=D:/kbengine/kbe/res/;D:/kbengine/HappyPoker_assets/;D:/kbengine/HappyPoker_assets/scripts/;D:/kbengine/HappyPoker_assets/res/
  INFO root [0x00001e60] [2019-06-19 19:33:00,112] - Resmgr::initialize: KBE_BIN_PATH=D:/kbengine/kbe/bin/server/
  INFO root [0x00001e60] [2019-06-19 19:33:00,131] - NetworkInterface::initialize(EXTERNAL-TCP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:20015 )
  INFO root [0x00001e60] [2019-06-19 19:33:00,131] - NetworkInterface::initialize(EXTERNAL-TCP): address 192.168.56.1:20015, SOMAXCONN=128.
  INFO root [0x00001e60] [2019-06-19 19:33:00,131] - NetworkInterface::initialize(EXTERNAL-UDP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:20005 )
  INFO root [0x00001e60] [2019-06-19 19:33:00,131] - NetworkInterface::initialize(EXTERNAL-UDP): address 192.168.56.1:20005, SOMAXCONN=128.
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - NetworkInterface::initialize(INTERNAL-TCP): bound to all interfaces with default route interface on 192.168.56.1 ( 192.168.56.1:49810 )
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - NetworkInterface::initialize(INTERNAL-TCP): address 192.168.56.1:49810, SOMAXCONN=128.
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - server-configs:
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	gameUpdateHertz : 10
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	entryScriptFile : kbemain
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	internalTcpAddr : 192.168.56.1:49810
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	externalTcpAddr : 192.168.56.1:20015
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	externalUdpAddr : 192.168.56.1:20005
  INFO root [0x00001e60] [2019-06-19 19:33:00,137] - 	componentID : 7001
  WARN root [0x00001e60] [2019-06-19 19:33:00,342] - invalid UID(0) <= 0, please check UID for environment! automatically set to 3960.
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - Components::findLogger: found logger, addr:192.168.56.1:49806
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - Components::addComponent: reset orderLog, uid=3960!
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - Components::addComponent[logger], uid=3960, componentID=2000, globalorderid=1, grouporderid=1, totalcount=1
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - ---- baseapp Version: 2.4.5. ScriptVersion: 0.1.0. Pythoncore: 3.7.3. Protocol: DCFA95A4364DC44A8B8A14D3936CBE92. Config: Debug X86. Built: 09:56:40 May  8 2019. AppID: 7001. UID: 3960. PID: 4228 ----
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - Server error_name: Intel(R) Core(TM) i5-6300HQ CPU @ 2.30GHz with 2097151kB RAM
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - ThreadPool::createThreadPool: creating  threadpool...
  INFO root [0x00001e60] [2019-06-19 19:33:00,648] - ThreadPool::createThreadPool: successfully(2), newThreadCount=1, normalMaxThreadCount=2, maxThreadCount=8
  INFO root [0x00001e60] [2019-06-19 19:33:00,851] - Script::install(): is successfully, Python=(3.7.3 (default, May  8 2019, 09:53:38) [MSC v.1916 32 bit (Intel)])!
  INFO root [0x00001e60] [2019-06-19 19:33:00,851] - Script::install(): KBExtra is successfully!
 S_ERR root [0x00001e60] [2019-06-19 19:33:00,941] -   File "D:/kbengine/HappyPoker_assets/scripts/base\Room.py", line 36
    if entity.id=entityID:
                ^
SyntaxError: invalid syntax
 ERROR root [0x00001e60] [2019-06-19 19:33:00,947] - app::initialize(): initialization failed!
  INFO root [0x00001e60] [2019-06-19 19:33:00,951] - Script::uninstall(): is successfully!
 DEBUG root [0x00001e60] [2019-06-19 19:33:00,951] - ThreadPool::destroy(): starting size 2.
  WARN root [0x00001e60] [2019-06-19 19:33:01,281] - ThreadPool::destroy(): waiting for thread(2)[0x245cd88,0x245c290,], try=1
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - TPThread::~TPThread(): 0x245cd88
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - TPThread::~TPThread(): 0x245c290
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - ThreadPool::destroy(): successfully!
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - Bundle::destroyObjPool(): size 13.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - Channel::destroyObjPool(): size 15.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,717] - TCPPacket::destroyObjPool(): size 0.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,741] - UDPPacket::destroyObjPool(): size 14.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,741] - EndPoint::destroyObjPool(): size 15.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,741] - Address::destroyObjPool(): size 0.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,741] - TCPPacketReceiver::destroyObjPool(): size 0.
 DEBUG root [0x00001e60] [2019-06-19 19:33:01,741] - UDPPacketReceiver::destroyObjPool(): size 0.
  WARN root [0x00001e60] [2019-06-19 19:33:01,741] - Forwarding logs to logger[192.168.56.1:49806/0/0/0]...
  INFO root [0x00001e60] [2019-06-19 19:33:08,328] - EventDispatcher()::~EventDispatcher: Num timers = 1
